--- a/bases.html
+++ b/bases.html
@@ -281,9 +281,10 @@
     <main>
         <section id="pizza"><div class="header-container">
             <a class="nav-button" href="savorybun.html">← Back</a>
-            <h2>Pizza Bases</h2>
             <a class="nav-button" href="minipizza.html">Next →</a>
         </div>
+        <h2>Pizza Bases</h2>
+    </div>
     
             <img src="images/base.png" alt="Pizza Bases" style="width: 50%; display: block; margin: 0 auto;" class="centered-image">
             <table>
