--- a/minipizza.html
+++ b/minipizza.html
@@ -267,9 +267,10 @@
     <main>
         <section id="mini-pizzas"><div class="header-container">
             <a class="nav-button" href="bases.html">← Back</a>
-            <h2>Mini Pizza Flavors</h2>
             <a class="nav-button" href="index.html">Next →</a>
         </div>
+        <h2>Mini Pizza Flavors</h2>
+    </div>
     
             <img src="images/minipizza.jpg" alt="Mini Pizzas"  style="width: 50%; display: block; margin: 0 auto;" class="centered-image">
             <table>
