--- a/minisub.html
+++ b/minisub.html
@@ -268,9 +268,10 @@
             <section id="flavors">
                 <div class="header-container">
                     <a class="nav-button" href="pies.html">← Back</a>
-                    <h2>MiniSub Flavors</h2>
                     <a class="nav-button" href="savorybun.html">Next →</a>
                 </div>
+                <h2>MiniSub Flavors</h2>
+            </div>
 
                 <img src="images/sub.jpg" alt="minisub"  class="centered-image">
                 
