--- a/savorybun.html
+++ b/savorybun.html
@@ -268,9 +268,10 @@
             <section id="flavors">
                 <div class="header-container">
                     <a class="nav-button" href="minisub.html">← Back</a>
-                    <h2>Savory Bun Flavors</h2>
                     <a class="nav-button" href="bases.html">Next →</a>
                 </div>
+                <h2>Savory Bun Flavors</h2>
+            </div>
 
                 <img src="images/savorybun.jpg" alt="savorybun" class="centered-image">
                 
