--- a/bases.html
+++ b/bases.html
@@ -136,7 +136,8 @@
             .nav-button {
                 color: white;
                 text-decoration: none;
-                font-size: 1.1rem;
+                font-size: 1rem;
+                padding: 1rem 1.5rem;  /* Updated padding to match mobile */
                 border-radius: 50px;
                 background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
                 transition: all 0.3s ease;
@@ -146,6 +147,7 @@
                 border: 2px solid transparent;
                 text-align: center;
                 white-space: nowrap;
+                font-weight: 600;  /* Added for better visibility */
             }
 
             .nav-button:hover {
