--- a/minipizza.html
+++ b/minipizza.html
@@ -246,7 +246,9 @@
                 }
 
                 img {
-                    width: 80%;
+                    width: 100%;
+                    max-width: 100%;
+                    height: auto;
                     margin: 1rem auto;
                 }
             }
