Added more products

--- a/index.html
+++ b/index.html
@@ -369,19 +369,19 @@
                         <a href="springroll.html" id="springrollLink">
                         <img src="images/springroll.jpg" alt="Spring Rolls"><span></span></a>
                         <h3>Spring Rolls</h3>
-                        <p>Price: R45.00 per dozen</p>
+                        <p>Price: R55.00 per dozen</p>
                     </div>
                     <div class="product">
                         <a href="pies.html" id="piesLink">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5r4KEEgsGs42IHEWfQzxtI0SlarBIDDa2QQ&s" alt="Pies"><span></span></a>
                         <h3>Pies</h3>
-                        <p>Price: R70.00 per dozen</p>
+                        <p>Price: R60.00 per dozen</p>
                     </div>
                     <div class="product">
                         <a href="minisub.html" id="minisubLink">
                         <img src="images/minisub.jpg" alt="Mini Sub"><span></span></a>
                         <h3>Mini Sub</h3>
-                        <p>Price: R50.00 for six</p>
+                        <p>Price: R70.00 per dozen</p>
                     </div>
                     <div class="product">
                         <a href="bun.html" id="bunLink">
@@ -399,13 +399,23 @@
                         <a href="minipizza.html" id="minipizzaLink">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQd2q-6tNDEMYLHyKHkPc_ckfIhGAAmS8UD4g&s" alt="Mini Pizzas"><span></span></a>
                         <h3>Mini Pizzas</h3>
-                        <p>Price: R50.00 for 6's</p>
+                        <p>Price: R35.00 for 6's</p>
                     </div>
+                    <div class="product">
+                        <a href="pur.html" id="purLink">
+                        <img src="images/pur.jpg" alt="HomemadePur"><span></span></a>
+                        <h3>Homemade Pur</h3>
+                        <p>Price: R90.00</p>
+                    </div>
+                    <div class="product">
+                        <a href="wheel.html" id="wheelLink">
+                        <img src="images/coconut.jpg" alt="Clusterwheel"><span></span></a>
+                        <h3>Chocolate Cluster Wheel</h3>
+                        <p>Price: R550 a tub</p>
                 </div>
             </section>
-
             <section id="shops">
-                <h2>Shops We Supply</h2>
+                <h2>Some Shops We Supply</h2>
                 <div class="shops-list">
                     <div class="shops">
                         <a href="https://spice-world.co.za/">
