--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 
             .shops-list {
                 display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
                 gap: 2rem;
                 padding: 1rem;
                 grid-template-columns: 4,1fr;
