--- a/bases.html
+++ b/bases.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DRS4ESEF5M"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-DRS4ESEF5M');
+        </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Z Snacks - Samoosas</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Permanent+Marker&display=swap" rel="stylesheet">
         <style>
+            /* Rest of your existing styles remain the same */
             :root {
                 --primary-color: #e06158;
                 --secondary-red: #ff4d4d;
@@ -137,7 +147,7 @@
                 color: white;
                 text-decoration: none;
                 font-size: 1rem;
-                padding: 1rem 1.5rem;  /* Updated padding to match mobile */
+                padding: 1rem 1.5rem;
                 border-radius: 50px;
                 background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
                 transition: all 0.3s ease;
@@ -147,7 +157,7 @@
                 border: 2px solid transparent;
                 text-align: center;
                 white-space: nowrap;
-                font-weight: 600;  /* Added for better visibility */
+                font-weight: 600;
             }
 
             .nav-button:hover {
@@ -228,7 +238,7 @@
                 }
 
                 .header-container {
-                    flex-direction: row; /* Changed from column to row */
+                    flex-direction: row;
                     gap: 1rem;
                     margin: 0 0 1.5rem 0;
                     padding: 0;
@@ -251,16 +261,6 @@
                 }
             }
         </style>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DRS4ESEF5M"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-DRS4ESEF5M');
-    </script>
-    
     </head>
 <body>
     <header>
