--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             .product-list {
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
                 gap: 2rem;
                 padding: 1rem;
             }
