--- a/bases.html
+++ b/bases.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DRS4ESEF5M"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'G-DRS4ESEF5M');
-        </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Z Snacks - Samoosas</title>
@@ -146,7 +137,7 @@
                 color: white;
                 text-decoration: none;
                 font-size: 1rem;
-                padding: 1rem 1.5rem;
+                padding: 1rem 1.5rem;  /* Updated padding to match mobile */
                 border-radius: 50px;
                 background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
                 transition: all 0.3s ease;
@@ -156,7 +147,7 @@
                 border: 2px solid transparent;
                 text-align: center;
                 white-space: nowrap;
-                font-weight: 600;
+                font-weight: 600;  /* Added for better visibility */
             }
 
             .nav-button:hover {
@@ -237,7 +228,7 @@
                 }
 
                 .header-container {
-                    flex-direction: row;
+                    flex-direction: row; /* Changed from column to row */
                     gap: 1rem;
                     margin: 0 0 1.5rem 0;
                     padding: 0;
@@ -260,6 +251,17 @@
                 }
             }
         </style>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DRS4ESEF5M"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-DRS4ESEF5M');
+        </script>
+
     </head>
 <body>
     <header>
