--- a/minipizza.html
+++ b/minipizza.html
@@ -284,7 +284,7 @@
             <a class="nav-button" href="bases.html">← Back</a>
             <a class="nav-button" href="index.html">Next →</a>
         </div>
-        <h2>Mini Pizza Flavors</h2>
+        <h2>Flavorful Mini Pizzas</h2>
     </div>
     
             <img src="images/minipizza.jpg" alt="Mini Pizzas"  style="width: 50%; display: block; margin: 0 auto;" class="centered-image">
