--- a/minisub.html
+++ b/minisub.html
@@ -283,7 +283,7 @@
                     <a class="nav-button" href="pies.html">← Back</a>
                     <a class="nav-button" href="savorybun.html">Next →</a>
                 </div>
-                <h2>MiniSub Flavors</h2>
+                <h2>Mini But Mighty Subs</h2>
             </div>
 
                 <img src="images/sub.jpg" alt="minisub"  class="centered-image">
