--- a/pies.html
+++ b/pies.html
@@ -282,7 +282,7 @@
                     <a class="nav-button" href="springroll.html">← Back</a>
                     <a class="nav-button" href="minisub.html">Next →</a>
                 </div>
-                <h2>Delicious Pie Flavors</h2>
+                <h2>Small Pies Sweet Surprise</h2>
             </div>
 
                 <!-- Image adjusted for responsive layout -->
