--- a/savorybun.html
+++ b/savorybun.html
@@ -282,7 +282,7 @@
                     <a class="nav-button" href="minisub.html">← Back</a>
                     <a class="nav-button" href="bases.html">Next →</a>
                 </div>
-                <h2>Savory Bun Flavors</h2>
+                <h2>Comforting Savory Bun</h2>
             </div>
 
                 <img src="images/savorybun.jpg" alt="savorybun" class="centered-image">
