--- a/wheel.html
+++ b/wheel.html
@@ -283,7 +283,7 @@
                     <a class="nav-button" href="pur.html">&larr; Back</a>
                     <a class="nav-button" href="index.html">Next &rarr;</a>
                 </div>
-                <h2>Delicious Chocolate Flavors</h2>
+                <h2>Decadent Chocolate Clusters</h2>
 
                 <img src="images/wheel.jpg" alt="WheelCluster">
 
