Title Page Update

--- a/minipizza.html
+++ b/minipizza.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Z Snacks - Samoosas</title>
+        <title>Z Snacks - MiniPiizza</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Permanent+Marker&display=swap" rel="stylesheet">
         <style>
             :root {
@@ -168,7 +168,7 @@
             }
 
             img {
-                max-width: 100%;
+                width: 100%;
                 height: auto;
                 border-radius: 20px;
                 margin: 2rem auto;
@@ -282,12 +282,12 @@
     <main>
         <section id="mini-pizzas"><div class="header-container">
             <a class="nav-button" href="bases.html">← Back</a>
-            <a class="nav-button" href="index.html">Next →</a>
+            <a class="nav-button" href="pur.html">Next →</a>
         </div>
         <h2>Flavorful Mini Pizzas</h2>
     </div>
     
-            <img src="images/minipizza.jpg" alt="Mini Pizzas"  style="width: 50%; display: block; margin: 0 auto;" class="centered-image">
+            <img src="images/minipizza.jpg" alt="Mini Pizzas"  style="width: 80%; display: block; margin: 0 auto;" class="centered-image">
             <table>
                 <thead>
                     <tr>
