--- a/samoosas.html
+++ b/samoosas.html
@@ -266,7 +266,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="https://mohamedsuhailkhan.github.io/Zsnacks/images/Logo.png" alt="Z Snacks Logo">
+                <img src="https://mohamedsuhailkhan.github.io/Zsnacks/images/Logo.png" alt="Z Snacks Logo" style="width: 80%; display: block; margin: 0 auto;" class="center">
             </div>
             <nav>
                 <ul>
