--- a/samoosas.html
+++ b/samoosas.html
@@ -246,7 +246,9 @@
                 }
 
                 img {
-                    width: 75%;
+                    width: 100%;
+                    max-width: 100%;
+                    height: auto;
                     margin: 1rem auto;
                 }
             }
