--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
             <h2>Some Shops We Supply</h2>
             <div class="shops-list">
                 <div class="shops">
-                    <a href="https://spice-world.co.za/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://mohamedsuhailkhan.github.io/Zsnacks/images/spiceworld.jpg" width="220" height="80" alt="Spiceworld">
+                    <a href="https://www.medinameats.co.za/?srsltid=AfmBOorMky1sTuK7o2H8Pry8vPzr72Yg4257WpY5uXx577sU1fv_wTiG" target="_blank" rel="noopener noreferrer">
+                        <img src="https://mohamedsuhailkhan.github.io/Zsnacks/images/Medina.jpg" width="220" height="80" alt="Medina Meats">
                     </a>
-                    <h3>Spiceworld</h3>
-                    <p>Sparks Rd, Overport, Durban, 4067</p>
+                    <h3>Medina Meats</h3>
+                    <p>Shop 3, 171/191 Florence Nightingale Dr, Westcliff, Chatsworth, 4092</p>
                 </div>
                 <div class="shops">
                     <a href="https://lotusprayergoods.co.za/" target="_blank" rel="noopener noreferrer">
