--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="shops-list">
                 <div class="shops">
                     <a href="https://www.medinameats.co.za/?srsltid=AfmBOorMky1sTuK7o2H8Pry8vPzr72Yg4257WpY5uXx577sU1fv_wTiG" target="_blank" rel="noopener noreferrer">
-                        <img src="https://mohamedsuhailkhan.github.io/Zsnacks/images/Medina.jpg" width="220" height="80" alt="Medina Meats">
+                        <img src="https://mohamedsuhailkhan.github.io/Zsnacks/images/Medina.png" width="220" height="80" alt="Medina Meats">
                     </a>
                     <h3>Medina Meats</h3>
                     <p>Shop 3, 171/191 Florence Nightingale Dr, Westcliff, Chatsworth, 4092</p>
